updated .gitignore to ignore visual studio hidden files

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.suo
+Bonsai.VideoAnnotations/.vs
 Bonsai.VideoAnnotations/packages
 Bonsai.VideoAnnotations/Bonsai.VideoAnnotations/bin
 Bonsai.VideoAnnotations/Bonsai.VideoAnnotations/obj
