--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Bonsai.VideoAnnotations/packages
 Bonsai.VideoAnnotations/Bonsai.VideoAnnotations/bin
 Bonsai.VideoAnnotations/Bonsai.VideoAnnotations/obj
 *.ipynb_checkpoints*
+*.png
