--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@ Bonsai.VideoAnnotations/packages
 Bonsai.VideoAnnotations/Bonsai.VideoAnnotations/bin
 Bonsai.VideoAnnotations/Bonsai.VideoAnnotations/obj
 *.ipynb_checkpoints*
+Workflows/plots
 
